--- a/docker-compose-hive.yml
+++ b/docker-compose-hive.yml
@@ -39,30 +39,24 @@ services:
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.1.0
   spark-master:
-    image: bde2020/spark-master:2.1.0-hadoop2.8-hive-java8
+    image: bde2020/spark-master:2.4.4-hadoop2.7
     container_name: spark-master
     ports:
-      - 8080:8080
-      - 7077:7077
-    env_file:
-      - ./hadoop-hive.env
-  spark-worker:
-    image: bde2020/spark-worker:2.1.0-hadoop2.8-hive-java8
+      - "8080:8080"
+      - "7077:7077"
+    environment:
+      - INIT_DAEMON_STEP=setup_spark
+    env_file: ./hadoop.env
+  spark-worker-1:
+    image: bde2020/spark-worker:2.4.4-hadoop2.7
+    container_name: spark-worker-1
     depends_on:
       - spark-master
-    environment:
-      - SPARK_MASTER=spark://spark-master:7077
     ports:
       - "8081:8081"
-    env_file:
-      - ./hadoop-hive.env
-  spark-notebook:
-    image: bde2020/spark-notebook:2.1.0-hadoop2.8-hive
-    container_name: spark-notebook
-    env_file:
-      - ./hadoop-hive.env
-    ports:
-      - 9001:9001
+    environment:
+      - "SPARK_MASTER=spark://spark-master:7077"
+    env_file: ./hadoop.env
   hue:
     image: bde2020/hdfs-filebrowser:3.11
     ports:
