Add Presto and Content Generator

--- a/docker-compose-hive.yml
+++ b/docker-compose-hive.yml
@@ -63,3 +63,7 @@ services:
       - 8088:8088
     environment:
       - NAMENODE_HOST=namenode
+  presto:
+    build: presto
+    ports: 
+      - 8089:8080
